2008-04-11	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/dialogs/client_settings.ui:
	* ima/src/main_window.h:
	* ima/src/dialogs.cpp:
	* ima/src/client.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	* ima/src/classroom_manager.cpp:
	Name (nickname) of the client is now optional,
	hostname (ip) is used as default (closes #1886578)

2008-04-03	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.qm:
	* ima/resources/it.ts:
	updated Italian localization

2008-04-03	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.cpp:
	drag'n'drop workaround for Qt bug #155700 (Qt < 4.3.4)

2008-04-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/isd_connection.cpp:
	made readFromServer() have a timeout - fixes hung processes/threads on
	blocked connections (closes #1924390)

	* lib/src/ivs_connection.cpp:
	fill screen and scaled screen with black

	* ima/src/client.cpp:
	improved client-thread-destruction

	* ima/src/main_window.cpp:
	improved button-texts

	* ima/src/classroom_manager.cpp:
	* ima/src/classroom_manager.h:
	- removed obsolete functions
	- small optimizations by not using foreach

	* ica/src/system_service.cpp:
	use QString::toLocal8Bit() instead of QString::toUtf8() - hopefully
	fixes #1898070

	* ica/src/local_system_ica.cpp:
	use SHTDN_REASON_MAJOR_OTHER instead of SHTDN_REASON_MAJOR_SYSTEM

	* setup/src/dialogs.cpp:
	- removed obsolete userinfo.exe
	- misc fixes

	* ima/src/italc_side_bar.cpp:
	improved painting

	* setup/src/dialogs.cpp:
	* setup/src/dialogs.h:
	fixed confirmation-dialog when closing setup-window via Alt+F4 or
	close-button (closes #1912695)

2008-04-02	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	drag and drop support for classroom manager (closes #1886602)

	* ica/resources/fi.ts:
	* lib/resources/fi.ts:
	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	updated Finnish localization-files
